fix: chat being jumpy on firefox

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -631,6 +631,7 @@ a:visited .info-container {
 	overflow-y: scroll;
 	box-sizing: border-box;
 	background: #080808;
+	overflow-anchor: none;
 }
 
 .hide-on-focus .msg-chat {
